Fix file placement and add more coding to main file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,25 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
+    <img src="images/map.jpg" alt="" aria-details="countries">
+
     <section id="description" tabindex="0">
       <h2>Description</h2>
+
+      <div id="countries">
+        <h3>Some countries where pangolins are found</h3>
+        <ol>
+          <li>Botswana</li>
+          <li>Kenya</li>
+          <li>Mozambique</li>
+          <li>Namibia</li>
+          <li>South Africa</li>
+          <li>Tanzania</li>
+          <li>Uganda</li>
+          <li>Zambia</li>
+          <li>Zimbabwe</li>
+        </ol>
+      </div>
     </section>
 
     <section id="behaviour" tabindex="0">
@@ -43,22 +60,6 @@
 </body>
 </html>
 
-The Pangolin
-
-Jump to main content
-Jump to navigation
-
-Description
-Some countries where pangolins are found
-Botswana
-Kenya
-Mozambique
-Namibia
-South Africa
-Tanzania
-Uganda
-Zambia
-Zimbabwe
 
 Behaviour
 https://en.wikipedia.org/wiki/Pangolin#Behavior
