--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 
     <section id="behaviour" tabindex="0">
       <h2>Behaviour</h2>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour">Read more</a>
     </section>
 
     <section id="conservation" tabindex="0">
       <h2>Conservation</h2>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation">Read more</a>
     </section>
   </main>
 
@@ -59,16 +61,3 @@
   </footer>
 </body>
 </html>
-
-
-Behaviour
-https://en.wikipedia.org/wiki/Pangolin#Behavior
-Read more about Pangolin behaviour
-Read more
-
-Conservation
-https://en.wikipedia.org/wiki/Pangolin#Conservation
-Read more about Pangolin conservation
-Read more
-
-© 1821 Pangolin
